add download modal

--- a/assets/css/_root.css
+++ b/assets/css/_root.css
@@ -8,6 +8,10 @@
     src: url(assets/fonts/TheOneLord.woff);
 }
 
+body {
+    @apply bg-vlada-color-1;
+}
+
 #__nuxt {
     @apply overflow-hidden bg-vlada-color-1;
 }
