--- a/assets/css/tags/p.css
+++ b/assets/css/tags/p.css
@@ -1,15 +1,15 @@
-p,a,li,span {
+p,a,li,span,button {
     @apply transition-all duration-500;
 }
 
 .dark-mode {
-    p {
+    p, button {
         @apply text-white;
     }
 }
 
 .light-mode {
-    p {
+    p, button {
         @apply text-black;
     }
 }
